# codecrafters-shell-rust

./: .gitignore  Cargo.toml  README.md  echo  echo2  echo|echo  history  history.json  test  test.txt  testing  testtest
src/: cmd.rs  cmds.rs  main.rs  solution.rs  tests.rs
