[package]
name = "codecrafters-shell"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2024"
rust-version = "1.91"

[dependencies]
anyhow = "1.0.68"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
crossterm = "0.29.0"
exec = "0.3.1"
lazy_static = "1.5.0"
search_path = "0.1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.38"                             # error handling
tokio = "1.48.0"
wait-timeout = "0.2.1"
